Fixing layout issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,6 @@ body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	height: 100%;
 	background-color: #f8fafc;
 }
 
